--- a/moduli12/css/style.css
+++ b/moduli12/css/style.css
@@ -25,3 +25,16 @@ h4 {
 
     text-decoration: overline;
 }
+
+.test {
+    color: aliceblue;
+
+
+}
+
+#qwerty {
+
+    color:blue;
+    font-style: italic;
+
+}
